FIX: Update build-linux for civetweb improvements and add test executable to cmake build

--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,12 @@ swap
 *~
 # auto-generated tag files
 tags
+
+# CMake
+CMakeCache.txt
+CMakeFiles/
+Makefile
+cmake_install.cmake
+libsplashkit.a
+splashkit_test
+projects/cmake/Resources
