NEW: Add OSX Travis CI Build

--- a/projects/cmake/CMakeLists.txt
+++ b/projects/cmake/CMakeLists.txt
@@ -1,7 +1,12 @@
 cmake_minimum_required(VERSION 3.2)
 project(splashkit)
 
-set(LIB_FLAGS "-lSDL2 -lSDL2_mixer -lSDL2_ttf -lSDL2_gfx -lSDL2_image -lSDL2_net -lpthread -lbz2 -lFLAC -lvorbis -lz -lpng16 -lvorbisfile -lmikmod -logg -lwebp -lsmpeg2 -lfreetype -lcurl -lsqlite3 -ldl")
+if (APPLE)
+    set(LIB_FLAGS "-L../../coresdk/lib/mac -framework IOKit -framework ForceFeedback -framework CoreFoundation -framework Cocoa -framework Carbon -framework AudioUnit -framework AudioToolbox -framework CoreAudio -framework CoreVideo -lSDL2 -lSDL2_mixer -lSDL2_ttf -lSDL2_gfx -lSDL2_image -lSDL2_net -lpthread -lbz2 -lFLAC -lvorbis -lz -lpng16 -lvorbisfile -lmikmod -logg -lwebp -lsmpeg2 -lfreetype -lcurl -lsqlite3 -ldl")
+else()
+    set(LIB_FLAGS "-lSDL2 -lSDL2_mixer -lSDL2_ttf -lSDL2_gfx -lSDL2_image -lSDL2_net -lpthread -lbz2 -lFLAC -lvorbis -lz -lpng16 -lvorbisfile -lmikmod -logg -lwebp -lsmpeg2 -lfreetype -lcurl -lsqlite3 -ldl")
+endif()
+
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
 
 file(GLOB SOURCE_FILES
@@ -24,6 +29,16 @@ include_directories(../../coresdk/src/coresdk)
 include_directories(../../coresdk/src/backend)
 include_directories(../../coresdk/src/test)
 include_directories(../../coresdk/external/civetweb/include)
+
+if (APPLE)
+    include_directories(../../coresdk/external/SDL/include)
+    include_directories(../../coresdk/external/SDL_gfx)
+    include_directories(../../coresdk/external/SDL_image/external/libpng-1.6.2)
+    include_directories(../../coresdk/external/SDL_image)
+    include_directories(../../coresdk/external/SDL_mixer)
+    include_directories(../../coresdk/external/SDL_net)
+    include_directories(../../coresdk/external/SDL_ttf)
+endif()
 
 add_library(splashkit SHARED ${SOURCE_FILES} ${INCLUDE_FILES})
 target_link_libraries(splashkit ${LIB_FLAGS})
