CONFIG: Add back cmake ignores
@jarmstrong has asked me to put these back -- didn't realise it
was affecting his dev structure!

--- a/.gitignore
+++ b/.gitignore
@@ -66,6 +66,13 @@ tags
 ### CMake ###
 projects/cmake/
 !CMakeLists.txt
+CMakeCache.txt
+CMakeFiles/
+Makefile
+cmake_install.cmake
+libsplashkit.a
+splashkit_test
+projects/cmake/Resources
 
 ### Generated Folders ###
 bin/
