--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,11 +1,14 @@
-platform:
-    - x64
 
 environment:
     matrix:
         - HOST_ARCH_ARG: --host=x86_64-w64-mingw32
           MSYS_BITS: 64
           ADD_PATH: /mingw64/bin
+          platform: x64
+        - HOST_ARCH_ARG: --host=i686-w64-mingw32
+          MSYS_BITS: 32
+          ADD_PATH: /mingw64/bin
+          platform: x32
 
 install:
     - C:\"Program Files (x86)\Microsoft Visual Studio 12.0\VC\vcvarsall.bat"
@@ -14,7 +17,7 @@ install:
     - C:\msys64\usr\bin\bash -lc "pacman -Syu --noconfirm"
     - C:\msys64\usr\bin\bash -lc "pacman -Syu --noconfirm" # Hackity hack hacks
     #- C:\msys64\usr\bin\bash -lc "pacman --noconfirm base-devel mingw-w64-{x86_64,i686}-toolchain"
-    - C:\msys64\usr\bin\bash -lc "pacman --noconfirm -S make wget tar patch dos2unix diffutils ca-certificates mingw-w64-x86_64-ca-certificates mingw-w64-x86_64-gcc mingw-w64-x86_64-gcc-fortran mingw-w64-x86_64-libpng cmake svn mercurial"
+    - C:\msys64\usr\bin\bash -lc "pacman --noconfirm -S make wget tar patch dos2unix diffutils ca-certificates mingw-w64-{x86_64,i686}-ca-certificates mingw-w64-{x86_64,i686}-gcc mingw-w64-{x86_64,i686}-gcc-fortran mingw-w64-{x86_64,i686}-libpng cmake svn mercurial"
 
 build_script:
     - C:\msys64\usr\bin\bash -lc "cd $APPVEYOR_BUILD_FOLDER; git clone --depth 10 https://github.com/splashkit/splashkit --recursive"
