--- a/.travis.yml
+++ b/.travis.yml
@@ -17,9 +17,12 @@ matrix:
         - os: osx
           osx_image: xcode7.3
           compiler: clang
+        - os: osx
+          osx_image: xcode7.3
+          env: DOC_TEST_ONLY=1
 
 before_install:
-    - ./.travis/install.sh
+    - .travis/install.sh
 
 branches:
     only:
@@ -27,5 +30,4 @@ branches:
         - test/ci-for-doc
 
 script:
-    - cmake projects/cmake && make -j 2 -C projects/cmake
-    - .travis/validate.sh
+    - .travis/run.sh
