--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,8 @@ matrix:
           compiler: clang
         - os: osx
           osx_image: xcode7.3
+          rvm: 2.3.1
+          gemfile: tools/translator/Gemfile
           env: DOC_TEST_ONLY=1
 
 before_install:
