FIX: Ensure dll copy is windows only

--- a/projects/cmake/CMakeLists.txt
+++ b/projects/cmake/CMakeLists.txt
@@ -177,9 +177,11 @@ add_custom_command(TARGET sktest
     PRE_BUILD COMMAND
     ${CMAKE_COMMAND} -E copy_directory "${SK_SRC}/test/Resources" $<TARGET_FILE_DIR:sktest>/Resources)
 
-add_custom_command(TARGET sktest
-    PRE_BUILD COMMAND
-    ${CMAKE_COMMAND} -E copy "${SK_LIB}/win64/*.dll" $<TARGET_FILE_DIR:sktest>)
+if (MSYS)
+    add_custom_command(TARGET sktest
+        PRE_BUILD COMMAND
+        ${CMAKE_COMMAND} -E copy "${SK_LIB}/win64/*.dll" $<TARGET_FILE_DIR:sktest>)
+endif()
 
 #### END sktest EXECUTABLE ####
 
