CONFIG: Rename cmake static library to SplashKitBackend

--- a/projects/cmake/CMakeLists.txt
+++ b/projects/cmake/CMakeLists.txt
@@ -131,40 +131,40 @@ endif()
 add_definitions(-DELPP_THREAD_SAFE)
 
 #### END SETUP ####
-#### SplashKit STATIC LIBRARY ####
-add_library(SplashKit STATIC ${SOURCE_FILES} ${INCLUDE_FILES})
+#### SplashKitBackend STATIC LIBRARY ####
+add_library(SplashKitBackend STATIC ${SOURCE_FILES} ${INCLUDE_FILES})
 
-target_link_libraries(SplashKit ${LIB_FLAGS})
+target_link_libraries(SplashKitBackend ${LIB_FLAGS})
 
 if (MSYS)
     link_directories("${SK_LIB}/win64")
-    target_link_libraries(SplashKit SDL2_mixer
-                                    SDL2_image
-                                    SDL2_net
-                                    libcivetweb
-                                    SDL2
-                                    SDL2_ttf
-                                    SDL2_ttf
-                                    libcurl
-                                    libSDL2_gfx-1-0-0
-                                    libpng16-16
-                                    libsqlite
-                                    pthread
-                                    stdc++
-                                    ws2_32)
+    target_link_libraries(SplashKitBackend SDL2_mixer
+                                           SDL2_image
+                                           SDL2_net
+                                           libcivetweb
+                                           SDL2
+                                           SDL2_ttf
+                                           SDL2_ttf
+                                           libcurl
+                                           libSDL2_gfx-1-0-0
+                                           libpng16-16
+                                           libsqlite
+                                           pthread
+                                           stdc++
+                                           ws2_32)
 endif()
 
 # SET OUTPUT TO /path/to/splashkit/out/lib
-set_target_properties(SplashKit
+set_target_properties(SplashKitBackend
     PROPERTIES
     ARCHIVE_OUTPUT_DIRECTORY "${SK_OUT}/lib"
 )
 
-#### END SplashKit STATIC LIBRARY ####
+#### END SplashKitBackend STATIC LIBRARY ####
 #### sktest EXECUTABLE ####
 add_executable(sktest ${TEST_SOURCE_FILES})
 
-target_link_libraries(sktest SplashKit)
+target_link_libraries(sktest SplashKitBackend)
 target_link_libraries(sktest ${LIB_FLAGS})
 
 set_target_properties(sktest
@@ -185,5 +185,5 @@ endif()
 
 #### END sktest EXECUTABLE ####
 
-install(TARGETS SplashKit DESTINATION lib)
-install(FILES ${INCLUDE_FILES} DESTINATION include/SplashKit)
+install(TARGETS SplashKitBackend DESTINATION lib)
+install(FILES ${INCLUDE_FILES} DESTINATION include/SplashKitBackend)
