CONFIG: Run libtool on generated backend static library
This will copy in all dependent static libs into the generated
static lib

Not sure how we can achieve the same results on Linux... granted
dependent libs are in /usr/lib -- @jarmstrong any thoughts?

--- a/projects/cmake/CMakeLists.txt
+++ b/projects/cmake/CMakeLists.txt
@@ -160,6 +160,16 @@ set_target_properties(SplashKitBackend
     ARCHIVE_OUTPUT_DIRECTORY "${SK_OUT}/lib"
 )
 
+# Use libtool to copy in dependent static libs into SplashKitBackend.a
+if (APPLE)
+  add_custom_command(TARGET SplashKitBackend
+      POST_BUILD COMMAND
+      libtool -static -o "${SK_OUT}/lib/libSplashKitBackend.a"
+                         "${SK_OUT}/lib/libSplashKitBackend.a"
+                         "${SK_LIB}/mac/*.a"
+  )
+endif()
+
 #### END SplashKitBackend STATIC LIBRARY ####
 #### sktest EXECUTABLE ####
 add_executable(sktest ${TEST_SOURCE_FILES})
