QUALITY: Prefix terminal functions with terminal identifier

--- a/projects/cmake/CMakeLists.txt
+++ b/projects/cmake/CMakeLists.txt
@@ -45,6 +45,7 @@ if (APPLE)
                    -lsmpeg2 \
                    -lfreetype \
                    -lcurl \
+                   -lncurses \
                    -ldl")
 # WINDOWS PROJECT FLAGS
 elseif(MSYS)
@@ -72,6 +73,7 @@ else()
                    -lwebp \
                    -lfreetype \
                    -lcurl \
+                   -lncurses \
                    -ldl")
 endif()
 
